Fix array out of bound bug in function parsePath
And add #gmw-cl-form-wrapper for hidding form from geo-my-wp

--- a/style.css
+++ b/style.css
@@ -512,6 +512,9 @@ a.page-numbers:focus {
     float: right;
     left: -40px;
 }
+#gmw-cl-form-wrapper{
+    display: none !important;
+}
 /*-------- ads --------*/
 .cate-ad-container{
     margin-top: 20px;
